--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -32,7 +32,10 @@
 							<p id='submit-time' class="submit-time">2017-03-28 11:20:51</p>
 						</div>
 					</div>
-					<div id="homework-info" class="homework-info"><p>fdsgfdsgfdgsgdf</p></div>
+					<div id="homework-info" class="homework-info">
+						<p class="answer-info">fdsgfdsgfdgsgdf</p>
+						<div id="answer-imgs" class="answer-imgs"><img class="answer-img" src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/thumb/1492754862612.jpg" style="width:110px;height:110px;"data-preview-src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/1492754862612.jpg" data-preview-group="undefined"/><img class="answer-img" src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/thumb/1492754862602.jpg" style="width:110px;height:110px;"data-preview-src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/1492754862602.jpg" data-preview-group="undefined"/><img class="answer-img" src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/thumb/1492754863082.jpg" style="width:110px;height:110px;"data-preview-src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/1492754863082.jpg" data-preview-group="undefined"/><img class="answer-img" src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/thumb/1492754863395.jpg" style="width:110px;height:110px;"data-preview-src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/1492754863395.jpg" data-preview-group="undefined"/><img class="answer-img" src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/thumb/1492754862489.jpg" style="width:110px;height:110px;"data-preview-src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/1492754862489.jpg" data-preview-group="undefined"/><img class="answer-img" src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/thumb/1492754862443.jpg" style="width:110px;height:110px;"data-preview-src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/1492754862443.jpg" data-preview-group="undefined"/></div>
+					</div>
 				</div>
 				<!--<div class="result-container">
 					<h6 class="comment-item">作业结果</h6>
