--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -26,7 +26,7 @@
 		        <div class="switch-handle-mine"></div>
 		    </div>
 		    <!--更多按钮-->
-		   	<a id="more" class="mui-icon  mui-icon-bars mui-pull-right display-none" href="#popover"></a>
+		   	<a id="more" class="mui-icon  mui-icon-bars mui-pull-right display-none" style="display: none;" href="#popover"></a>
 		   	<!--相机按钮-->
 		    <a id="icon-camero" class="mui-icon iconfont icon-xiangji  mui-pull-right display-none"></a>
 		</header>
