--- a/JiaoBaoYun-hb/html/mine/QRCode.html
+++ b/JiaoBaoYun-hb/html/mine/QRCode.html
@@ -9,7 +9,7 @@
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<!--<script src="../../js/utils/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>-->
-		
+
 	</head>
 
 	<body>
@@ -17,7 +17,7 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">群二维码名片</h1>
 		</header>
-		
+
 		<!--<div class="mui-content" style="background: black none repeat scroll 0% 0%;">
 			<div id="" style="background: white;/*! margin-top: 10px; *//*! margin-left: 10px; *//*! margin-right: 10px; *//*! margin-bottom: 10px; */margin: 2.5rem;">
 				<div style="padding: 1.8rem;/*! vertical-align: middle; *//*! line-height: 4.5rem; *//*! height: 4.5rem; */">
@@ -27,15 +27,15 @@
 			</div>
 
 		</div>-->
-		
-		<div class="mui-content mui-fullscreen" style="background: white;"> 
-			<div id=""  style="background: white; margin: 2.5rem; position: absolute;top: 5.3rem;right: 0;bottom: 7.5rem;left: 0;">
+
+		<div class="mui-content mui-fullscreen" style="background: white;">
+			<div id="" style="background: white; margin: 2.5rem; position: absolute;top: 5.3rem;right: 0;bottom: 7.5rem;left: 0;">
 				<div style="padding: 1.8rem;">
-					<img id="groupImg" style="width: 4.5rem;height: 4.5rem;float: left; border-radius: 50%;">
+					<img id="groupImg" style="width: 4.5rem;height: 4.5rem;float: left; border-radius: 50%; display: none;">
 					<h6 id="groupName" style="margin-left: 1rem;color: #323232;"></h6>
-					<p id="group-info"></p>
+					<p id="group-info" style="margin-left: 40px;"></p>
 				</div>
-				<div class="qrcode" style="background: white;text-align: center;padding: 1rem;width: 100%;height: 100%;"></div>
+				<div class="qrcode" style="background: white;text-align: center;padding: 1rem;width: 100%;height: 80%;"></div>
 			</div>
 
 		</div>
@@ -47,25 +47,36 @@
 		<script type="text/javascript">
 			var qrcodeUrl;
 			mui.init({
-				swipeBack: true //启用右滑关闭功能
+				swipeBack: true //启用右滑关闭功能1492745882000
 			});
 			mui.plusReady(function() {
 				var curPage = plus.webview.currentWebview();
-			var groupModel = curPage.data;//群model
-			var temp0 = escape(groupModel.gname,'UTF-8');
-			var temp1 = escape(groupModel.gnote,'UTF-8');
-			qrcodeUrl = '1@'+groupModel.gid+'@'+temp0+'@'+groupModel.gimg+'@'+temp1;//code1，代表是群二维码
-			document.getElementById("groupImg").src = updateHeadImg(groupModel.gimg,2);
-			document.getElementById("groupName").innerText = groupModel.gname;
-			document.getElementById("group-info").innerText=groupModel.gnote;
-			console.log('qrcodeUrl='+qrcodeUrl);
+				var groupModel = curPage.data; //群model
+				var temp0 = escape(groupModel.gname, 'UTF-8');
+				var temp1 = escape(groupModel.gnote, 'UTF-8');
+//				var mytime = getNowFormatDate();
+//				console.log('myDate==' + mytime);
+				qrcodeUrl = 'jby1@' + groupModel.gid + '@' + temp0 + '@' + groupModel.gimg + '@' + temp1+ '@' +events.getNowFormatDate(); //code1，代表是群二维码
+				document.getElementById("groupImg").style.display = 'inline-block';
+				document.getElementById("groupImg").src = updateHeadImg(groupModel.gimg, 2);
+				document.getElementById("groupName").innerText = groupModel.gname;
+				document.getElementById("group-info").innerText = groupModel.gnote;
+				console.log('qrcodeUrl=' + qrcodeUrl);
 				makrQRCode();
+//				var years = 1000 * 60 * 60 * 24;
+//				var tempValue = Date.UTC(2000, 1, 1, 10, 10, 20, 30);
+//				console.log('tempValue=' + tempValue + ',' + tempValue / years);
+//				var tempValue1 = Date.UTC(2000, 1, 2, 20, 10);
+//				console.log('tempValue1=' + tempValue1 + ',' + tempValue1 / years + ',' + (tempValue1 - tempValue) / years);
+//				var tempValue2 = Date.UTC(mytime);
+//				console.log('tempValue2=' + tempValue2);
 			});
 
 			// 制作二维码
 			function makrQRCode() {
 				jQuery('.qrcode').qrcode(qrcodeUrl);
 			}
+			
 		</script>
 	</body>
 
