更改自适应输入框底部边线

--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -22,6 +22,7 @@
 			<textarea id="input-content" class="remark-input" type="text" maxlength="20" style="height: 42px;min-height: 42px;" placeholder="请输入,最多20字!" ></textarea>
 			<p class="input-left">20</p>
 			</div>
+			<div style="background-color: #00A5E0;height: 1px;margin-left: 2.5%;width: 95%;"></div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
