--- a/JiaoBaoYun-hb/html/quan/edit-remark.html
+++ b/JiaoBaoYun-hb/html/quan/edit-remark.html
@@ -23,7 +23,6 @@
 				display: flex;
 				display: -webkit-flex;
 				background-color: white;
-				border-bottom: 1px #00A5E0 solid;
 			}
 			
 			.remark-input {
@@ -57,6 +56,7 @@
 				<textarea id="remark-input" class="remark-input" type="text" style="height: 42px;min-height: 42px;" placeholder="请输入,最多20字!"></textarea>
 				<p class="input-left">20</p>
 			</div>
+			<div style="background-color: #00A5E0;height: 1px;margin-left: 2.5%;width: 95%;"></div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
