1、与我相关添加未读提醒 2、展现发布动态后白屏问题

--- a/JiaoBaoYun-hb/html/quan/zone_main.html
+++ b/JiaoBaoYun-hb/html/quan/zone_main.html
@@ -35,6 +35,12 @@
 		mui.init({
 
 		})
+		 //重写系统返回方法
+			var old_back = mui.back;
+			mui.back = function() {
+			events.closeWaiting();
+			old_back()
+			}
 		mui.plusReady(function() {
 
 			events.changeTopPocket();
