--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -16,41 +16,43 @@
 		<link rel="stylesheet" href="../../css/cloud/file.css" />
 		<link rel="stylesheet" type="text/css" href="../../css/utils/MUI-pullToRefresh.css" />
 		<style>
-			body,.mui-content{
+			body,
+			.mui-content {
 				background-color: #f2f3f5;
 			}
+			
 			#topPopover {
 				position: fixed;
 				top: 10px;
 				right: 6px;
-				width: 120px;
+				width: 150px;
 			}
-
+			
 			#topPopover .mui-popover-arrow {
 				left: auto;
 				right: 6px;
 				top: -25px;
 			}
-
+			
 			.mui-popover {
 				height: 80px;
-				width: 120;
+				width: 150;
 			}
-
+			
 			#refreshContainer .mui-table-view:before,
 			#refreshContainer .mui-table-view:after,
 			#refreshContainer .mui-table-view-cell:after {
 				height: 0px;
 			}
-
+			
 			#refreshContainer .mui-table-view {
 				background-color: white;
 			}
-
+			
 			.cloud-item {
 				background-color: white;
 			}
-
+			
 			.cloud-item-left {
 				width: 16%;
 				border-right: 1px solid #D9D9D9;
@@ -59,7 +61,7 @@
 				font-weight: bold;
 				font-size: 1.6rem;
 			}
-
+			
 			.cloud-item-right {
 				/*margin-left: 16%;*/
 				width: 84%;
@@ -77,27 +79,27 @@
 			/*每一项的第二行*/
 			/*background-color: blue;*/
 			/*}*/
-
+			
 			.mui-plus-pullrefresh .mui-scroll {
 				position: absolute;
 				/*width: 100%;*/
 			}
-
+			
 			.mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
 				color: black;
 				border: none;
 			}
-
+			
 			#refreshContainer .mui-table-view-cell {
 				display: inline-block;
 				width: auto;
 				padding: 1px 1px;
 			}
-
+			
 			.mui-slider-indicator .mui-table-view-cell.mui-active {
 				background: white;
 			}
-
+			
 			.cloud-red-point {
 				position: absolute;
 				background: red;
@@ -106,27 +108,27 @@
 				border-radius: 50%;
 				display: none;
 			}
-
+			
 			img {
 				border-radius: 50%;
 			}
-
+			
 			#cloudstorage_1 img {
 				border-radius: 0px;
 			}
-
+			
 			.icon-jiaxiabiao {
 				color: #0ABAF5;
 			}
-
+			
 			.icon-banxiabiao {
 				color: #FFBA00;
 			}
-
+			
 			.icon-re {
 				color: #FD681E;
 			}
-
+			
 			.icon-re,
 			.icon-banxiabiao,
 			.icon-jiaxiabiao {
@@ -134,7 +136,7 @@
 				border: none !important;
 				top: 0px;
 			}
-
+			
 			.mui-popup-input input {
 				/*popup 输入框*/
 				height: 34px;
@@ -204,10 +206,8 @@
 
 				<li id="aboutme" class="mui-table-view-cell mui-media " style="height: 50px;">
 					<img class="mui-media-object mui-pull-left" style="width: 20px ;height: 20px;" src="../../image/quan/aboutme.png" />
-										<div class="mui-media-body  mui-pull-left" id="titleFlag2" style="color: #323232;">与我相关</div>
-
-<!--					<div class="mui-media-body  mui-pull-left" id="titleFlag2" style="color: #323232;"><span  class="mui-pull-left">与我相关</span><span id="aboutme_noRead" class="mui-badge mui-badge-danger mui-pull-left" style="margin-left: 0px;margin-top: -5px;visibility: visible;">3</span></div>
--->				</li>
+					<div class="mui-media-body  mui-pull-left" id="titleFlag2" style="color: #323232;margin-top: -10px;padding-top: 10px;"><span class="mui-pull-left">与我相关</span><span id="aboutme_noRead" class="mui-badge mui-badge-danger mui-pull-left" style="margin-left: 0px;margin-top: -5px;visibility: hidden;"></span></div>
+				</li>
 				<li id="Scan" class="mui-table-view-cell mui-media ">
 					<img class="mui-media-object mui-pull-left" style="width: 20px ;height: 20px;" src="../../image/quan/Scan.png" />
 					<div class="mui-media-body" id="titleFlag2" style="color: #323232;">扫一扫</div>
@@ -362,6 +362,18 @@
 
 				//				events.preload("../homework/homework-tea.html", 300);
 				events.preload('storage_main.html', 300); //预加载云存储
+
+				window.addEventListener("NoReadCnt", function(e) {
+					var NoReadCnt = e.detail.data;
+					var noRead = document.getElementById('aboutme_noRead');
+					if(NoReadCnt == 0) {
+						noRead.innerHTML = NoReadCnt;
+						noRead.style.visibility = 'hidden';
+					} else {
+						noRead.style.visibility = 'visible';
+						noRead.innerHTML = NoReadCnt;
+					}
+				})
 				window.addEventListener("topPopover", function(e) {
 					mui('#topPopover').popover('toggle')
 				});
@@ -1432,7 +1444,7 @@
 					mui.toast('删除成功');
 					var cell = document.getElementById("data_" + cellInfo.DocType + "_" + cellInfo.DocId);
 					cell.parentNode.removeChild(cell);
-					delete studentDoc[cellInfo.DocType + "_" + cellInfo.DocId];//删除对应保存的数据
+					delete studentDoc[cellInfo.DocType + "_" + cellInfo.DocId]; //删除对应保存的数据
 					events.closeWaiting(dataInfo.wd);
 				} else {
 					events.closeWaiting(dataInfo.wd);
