--- a/JiaoBaoYun-hb/html/mine/apply-bycode1.html
+++ b/JiaoBaoYun-hb/html/mine/apply-bycode1.html
@@ -19,7 +19,7 @@
 		</header>
 		<div class="mui-content mui-fullscreen">
 			<div class="group-info" style="width: 100%; margin-top: 50%;text-align: center;">
-				<div class="dated-code" style="width: 50%;margin-left: 25%; min-height: 100px;" >
+				<div class="dated-code" style="width: 50%;margin-left: 25%; min-height: 100px;display: none;" >
 					<span  class="iconfont icon-jinggao-copy" style="color: red;font-size: 100px;line-height: 50px;"></span>
 				</div>
 				<h5 id="group-info" class="">二维码已过期</h5>
